# keepr

./: .gitignore  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TODOS.md  index.html  package-lock.json  package.json  release-v0.2.0.md  release-v0.2.1.md  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude-plugin/: marketplace.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  false_claim.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
bench-results/: README.md
docs/: index.html  signing.md
docs/architecture/: ctxd-topology.md
docs/decisions/: 001-ctxd-subject-schema.md  002-ctxd-lifecycle.md
docs/screenshots/: README.md
evals/: README.md  run.ts
evals/fixtures/: ambiguous.json  baseline.json  stretched_thin.json
homebrew/: README.md  keepr.rb
landing/: index.html
plugin/: README.md
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/skills/keepr-add-followup/: SKILL.md
plugin/skills/keepr-open/: SKILL.md
plugin/skills/keepr-pulse/: SKILL.md
plugin/skills/keepr-setup/: SKILL.md
plugin/skills/keepr-status/: SKILL.md
scripts/: fetch-ctxd.ts  release.ts
src/: App.tsx  main.tsx  test-setup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: memory_query.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: binresolve.rs  cli.rs  fs_atomic.rs  lib.rs  main.rs  secrets.rs
src-tauri/src/memory/: client.rs  daemon.rs  errors.rs  mod.rs  ports.rs
src/components/: ActivitySidebar.tsx  CommandPalette.tsx  MemoryFirstLaunchBanner.tsx  PersonDetail.tsx  RelatedPanel.tsx  RunOverlay.tsx  SessionReader.tsx  Sidebar.tsx  Titlebar.tsx  UpdateBanner.tsx
src/components/__tests__/: ActivitySidebar.test.tsx  CommandPalette.memory.test.tsx  MemoryFirstLaunchBanner.test.tsx  RelatedPanel.test.tsx  RunOverlay.test.tsx  UpdateBanner.test.tsx
src/components/onboarding/: FirstRun.tsx  ScopePickerPanel.tsx  StepDemoReady.tsx  StepGitHub.tsx  StepJira.tsx  StepLLM.tsx  StepLinear.tsx  StepMemory.tsx  StepPrivacy.tsx  StepRubric.tsx  StepSlack.tsx  StepTeam.tsx  StepWelcome.tsx  UserCombobox.tsx  fuzzyMatch.ts  primitives.tsx  useScopePicker.ts
src/components/onboarding/__tests__/: StepLLM.test.tsx  StepSlack.test.tsx  StepTeam.test.tsx  UserCombobox.test.tsx  useScopePicker.test.ts
src/components/primitives/: CategoryDivider.tsx  CliProviderPanel.tsx  Popover.tsx  SourceBadge.tsx
src/components/primitives/__tests__/: CategoryDivider.test.tsx  CliProviderPanel.test.tsx
src/demo/fixtures/: index.ts  jiraIssues.ts  linearIssues.ts  members.ts  mergeRequests.ts  pullRequests.ts  slackMessages.ts
src/features/citation-sync/: ClaimHighlight.tsx  SplitLayout.tsx
src/features/confidence/: ConfidenceBadge.tsx  computeConfidence.ts
src/features/evidence-cards/: CitationPopover.tsx  EvidenceCard.tsx  parseEvidence.ts
src/features/followups/: FollowUpBoard.tsx  FollowUpCard.tsx  FollowUpDetail.tsx  FollowUpStore.ts  parseFollowUps.ts
src/features/team-heatmap/: HeatmapCell.tsx  HeatmapGrid.tsx  HeatmapPanel.tsx
src/features/thread-graph/: GraphNode.tsx  GraphView.tsx  inferEdges.ts  layoutGraph.ts
src/features/timeline/: TimelineDayDetail.tsx  TimelineStrip.tsx  groupByDay.ts
src/lib/: abort.ts  markdown.ts  types.ts  version.ts
src/prompts/: haiku_channel_summary.md  one_on_one_prep.md  perf_evaluation.md  promo_readiness.md  team_pulse.md  weekly_eng_update.md
src/screens/: FollowUps.tsx  Home.tsx  MemorySearch.tsx  MemoryView.tsx  Onboarding.tsx  Settings.tsx  TeamHeatmap.tsx  ThreadGraph.tsx
src/screens/__tests__/: MemorySearch.test.tsx  Settings.test.tsx
src/services/: ctxStore.ts  ctxSubjects.ts  db.ts  demo.ts  fsio.ts  github.ts  gitlab.ts  jira.ts  linear.ts  llm.ts  memory.ts  pipeline.ts  pulseOutcome.ts  search.ts  secrets.ts  slack.ts  sourceDiagnostic.ts  teammateSearch.ts  updater.ts
src/services/__tests__/: ctxStore.test.ts  ctxSubjects.test.ts  gitlab.test.ts  llm.spawn.test.ts  llm.test.ts  memoryDualWrite.test.ts  memoryEvidenceBridge.test.ts  pipeline.test.ts  sourceDiagnostic.test.ts  teammateSearch.test.ts  updater.test.ts
src/styles/: globals.css
tasks/: codex-provider.md  ctxd-integration.md  onboarding-scope-picker.md  pulse-outcome-states.md
