[package]
name = "keepr"
version = "0.1.0"
description = "Keepr — AI Chief of Staff for Engineering Managers"
authors = ["Keepr"]
edition = "2021"

[lib]
name = "keepr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
anyhow = "1"
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
